# palautusrepositorio

./: .gitignore  PULL.md  README.md
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py  playerservice.py  ui.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/web-login/: interactive_console_output.xml  log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot
viikko4/: retro.md
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/kivi-paperi-sakset/src/: builder.py  index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
