[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = "Tehtävä 1"
authors = ["Uxusino Uxusone <89293277+Uxusino@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
